--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -61,3 +61,25 @@
     }
   });
 </script>
+
+<script> 
+  function copyclip(texttocopy) {
+    
+    // Al function to copy from clipboard
+    
+    // Create new element
+    var el = document.createElement('textarea');
+    // Set value (string to be copied)
+    el.value = texttocopy;
+    // Set non-editable to avoid focus and move outside of view
+    el.setAttribute('readonly', '');
+    el.style = {position: 'absolute', left: '-9999px'};
+    document.body.appendChild(el);
+    // Select text inside element
+    el.select();
+    // Copy text to clipboard
+    document.execCommand('copy');
+    // Remove temporary element
+    document.body.removeChild(el);
+  }
+</script>
